feat: teste localstorage blazor

--- a/PocAspNetCoreBlazorAntDesign.csproj
+++ b/PocAspNetCoreBlazorAntDesign.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AntDesign" Version="0.12.7" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
   </ItemGroup>
 
